--- a/os/darwin/app/homebrew/Brewfile
+++ b/os/darwin/app/homebrew/Brewfile
@@ -225,6 +225,7 @@ brew "node"
 brew "open-mpi"
 brew "openblas"
 brew "openssh"
+brew "openssl@1.1"
 brew "osx-cpu-temp"
 brew "pandoc"
 brew "pandoc-citeproc"
