--- a/.gitmodules
+++ b/.gitmodules
@@ -26,6 +26,11 @@
 	url = https://github.com/scrooloose/nerdtree.git
 	branch = master
 	ignore = dirty
+[submodule "app/vim/vim.d/pack/dist/start/rust.vim"]
+	path = app/vim/vim.d/pack/dist/start/rust.vim
+	url = https://github.com/rust-lang/rust.vim
+    branch = master
+    ignore = dirty
 [submodule "app/vim/vim.d/pack/dist/start/syntastic"]
 	path = app/vim/vim.d/pack/dist/start/syntastic
 	url = https://github.com/vim-syntastic/syntastic.git
