Add command comment

--- a/app/pip/pip.conf
+++ b/app/pip/pip.conf
@@ -2,6 +2,8 @@
 # Global pip configuration.
 # Updated 2020-12-31.
 #
+# > pip config set global.disable-pip-version-check true
+#
 # See also:
 # - https://stackoverflow.com/questions/46288847/
 # """
