--- a/app/starship/starship.toml
+++ b/app/starship/starship.toml
@@ -1,6 +1,6 @@
 # """
 # starship prompt configuration
-# Updated 2020-11-14.
+# Updated 2021-02-15.
 #
 # Allowed standard colors:
 # - black
@@ -35,8 +35,8 @@ disabled = true
 [directory]
 # > style = "bold cyan"
 read_only = ""
-truncate_to_repo = true
-truncation_length = 4
+truncate_to_repo = false
+truncation_length = 0  # no truncation
 truncation_symbol = ""
 
 [gcloud]
