Update bash appearance

--- a/app/starship/starship.toml
+++ b/app/starship/starship.toml
@@ -61,7 +61,7 @@ python_binary = "python3"
 
 # Assuming Zsh is default shell.
 [shell]
-bash_indicator = "bash "
+bash_indicator = "\\$ "
 disabled = false
 format = "$indicator"
 zsh_indicator = ""
