--- a/.gitmodules
+++ b/.gitmodules
@@ -158,3 +158,7 @@
 	path = theme/nord/vim
 	url = https://github.com/arcticicestudio/nord-vim.git
 	branch = master
+[submodule "theme/dracula/tmux"]
+	path = theme/dracula/tmux
+	url = https://github.com/dracula/tmux.git
+	branch = master
