--- a/app/starship/starship.toml
+++ b/app/starship/starship.toml
@@ -1,6 +1,6 @@
 # """
 # starship prompt configuration
-# Updated 2021-03-25.
+# Updated 2021-05-06.
 #
 # Allowed colors: black, blue, cyan, green, purple, red, white, yellow.
 # Note that "magenta" maps to "purple" here.
@@ -33,6 +33,15 @@ style = "blue"
 truncate_to_repo = false
 truncation_length = 0  # no truncation
 truncation_symbol = ""
+
+# Conditional format strings:
+# https://starship.rs/config/#conditional-format-strings
+
+[env_var]
+disabled = false
+format = "[\\[subshell\\]]($style) "
+style = "bold white"
+variable = "KOOPA_SUBSHELL"
 
 [gcloud]
 disabled = true
