--- a/.gitmodules
+++ b/.gitmodules
@@ -65,7 +65,7 @@
 	path = theme/nord/alacritty
 	url = https://github.com/arcticicestudio/nord-alacritty.git
 	branch = master
-[submodule "theme/nord/iterm2"]
-	path = theme/nord/iterm2
+[submodule "theme/nord/iterm"]
+	path = theme/nord/iterm
 	url = https://github.com/arcticicestudio/nord-iterm2.git
 	branch = master
