Improve SpaceVim install support

--- a/app/spacevim/init.toml
+++ b/app/spacevim/init.toml
@@ -1,16 +1,23 @@
-#=============================================================================
-# dark_powered.toml --- dark powered configuration example for SpaceVim
-# Copyright (c) 2016-2020 Wang Shidong & Contributors
-# Author: Wang Shidong < wsdjeg at 163.com >
-# URL: https://spacevim.org
-# License: GPLv3
-#=============================================================================
-
+# """
+# SpaceVim configuration.
+# @note Updated 2021-06-07.
+#
 # Well-supported color schemes are documented here:
 # https://spacevim.org/layers/colorscheme/
-# Note that statusline support for Dracula is currently missing.
+#
+# Here's how to enable Dracula theme, for reference.
+# Note that proper statusline support is currently missing.
+#
+# > [[custom_plugins]]
+# >     repo = "dracula/vim"
+# >     name = "dracula"
+# >     merged = false
+#
+# See also:
+# - https://draculatheme.com/vim
+# - https://github.com/dracula/vim/issues/190
+# """
 
-# All SpaceVim option below [option] section
 [options]
     buffer_index_type = 4
     colorscheme = "nord"
@@ -23,22 +30,11 @@
     statusline_iseparator = "arrow"
     statusline_separator = "arrow"
 
-# Here's how to enable Dracula theme.
-# However this doesn't support statusline currently, so disabled.currently
-# https://draculatheme.com/vim
-# https://github.com/dracula/vim/issues/190
-# > [[custom_plugins]]
-# >     repo = "dracula/vim"
-# >     name = "dracula"
-# >     merged = false
-
-# Enable autocomplete layer
 [[layers]]
     name = "autocomplete"
     auto_completion_return_key_behavior = "complete"
     auto_completion_tab_key_behavior = "smart"
 
-# This is required to enable other themes.
 [[layers]]
     name = "colorscheme"
 
